--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,6 @@
   --backGroundColor: rgb(126, 120, 174);
   text-align: center;
   background-color: var(--backGroundColor);
+  /* display: flex;
+  flex-direction: row; */
 }
