--- a/src/Styles/TavernTeam.css
+++ b/src/Styles/TavernTeam.css
@@ -13,20 +13,20 @@
 
 .item:nth-child(1) {
   transform: translate(75%, 0) scale(0.5);
-  z-index: 9;
 }
 
 .item:nth-child(2) {
   transform: translate(25%, 0) scale(0.5);
-  z-index: 8;
 }
 
 .item:nth-child(3) {
   transform: translate(-25%, 0) scale(0.5);
-  z-index: 7;
 }
 
 .item:nth-child(4) {
   transform: translate(-75%, 0) scale(0.5);
-  z-index: 6;
+}
+
+.item:nth-child(5) {
+  transform: translate(-125%, 0) scale(0.5);
 }
