--- a/src/Styles/charStyle.css
+++ b/src/Styles/charStyle.css
@@ -51,9 +51,11 @@
   justify-content: start;
   overflow-wrap: break-word;
   margin-bottom: 10%;
-  color: black;
+  color: rgb(31, 7, 51);
   display: inline-block;
+  font-family: 'Roboto Mono', monospace;
   max-width: 20ch;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .scrollStyle {
@@ -96,15 +98,19 @@
 }
 
 .lvlStyle {
-  color: black;
+  color: rgb(255, 255, 255);
   margin-left: 5px;
   margin: 2px;
+  font-family: 'Roboto Mono', monospace;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .expStyle {
   margin-left: 5px;
   margin: 2px;
-  color: #1b8700;
+  color: #30b017;
+  font-family: 'Roboto Mono', monospace;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .iconContainer {
@@ -140,7 +146,7 @@
   color: black;
   margin-top: 2px;
   display: inline-block;
-  text-shadow: 0 0 1px black;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .dmgIcon {
