--- a/src/Styles/charStyle.css
+++ b/src/Styles/charStyle.css
@@ -108,7 +108,7 @@
 .expStyle {
   margin-left: 5px;
   margin: 2px;
-  color: #30b017;
+  color: #2cfc03;
   font-family: 'Roboto Mono', monospace;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
