--- a/src/Styles/battleStats.css
+++ b/src/Styles/battleStats.css
@@ -11,7 +11,7 @@
   z-index: 50;
 }
 
-.boxStyle {
+.battleStatsBox {
   position: relative;
   width: 30rem;
   height: 32rem;
@@ -22,7 +22,7 @@
   text-align: left;
 }
 
-.beforeStyle {
+.lineStyle {
   position: relative;
   bottom: 0;
   left: 0;
@@ -37,6 +37,7 @@
   margin: auto;
   text-shadow: -2px 0 #30b017, 0 2px #2cfc03, 2px 0 black, 0 -3px black;
   font-family: 'Roboto Mono', monospace;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .victoryStyle {
@@ -47,7 +48,8 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  text-shadow: -2px 0 #30b017, 0 2px #2cfc03, 2px 0 black, 0 -1px black;
+  text-shadow: -1px 0 #50ff2d, 0 1px white, 1px 0 black, 0 -1px black;
+  filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.5));
 }
 
 .defeatStyle {
@@ -59,6 +61,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-shadow: -2px 0 #f52a2a, 0 2px #a61f1f, 2px 0 black, 0 -2px black;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .battleStatsGrid {
@@ -74,6 +77,7 @@
   width: 60px;
   height: 60px;
   margin-left: 20px;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .battleStatsGold {
@@ -90,8 +94,9 @@
   margin: auto;
   text-align: left;
   font-size: 35px;
-  text-shadow: -2px 0 #d6cd8b, 0 2px #fff291, 1px 0 black, 0 -1px black;
+  text-shadow: -2px 0 #d6cd8b, 0 2px #fff291;
   font-family: Roboto Mono, monospace;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .battleStatsExp {
@@ -109,8 +114,9 @@
 .battleStatsExpText {
   margin: auto;
   font-size: 35px;
-  text-shadow: -2px 0 #30b017, 0 2px #2cfc03, 1px 0 black, 0 -1px black;
+  text-shadow: -2px 0 #30b017, 0 2px #2cfc03;
   font-family: 'Roboto Mono', monospace;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .battleStatsOuterDiv {
@@ -124,21 +130,24 @@
   position: absolute;
   left: 5%;
   top: 3%;
-  border: 3px solid rgba(0, 0, 0, 0.3);
+  /* border: 3px solid rgba(0, 0, 0, 0.3); */
   border-radius: 10px;
   border-collapse: separate;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .battleStatsTable thead {
   background-color: #C0C1B7;
   font-size: 30px;
   font-family: 'Roboto Mono', monospace;
+  
 } 
 
 .battleStatsTable th {
   border-radius: 10px;
   padding: 10px;
   margin-right: 50px;
+  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.5));
 }
   
 .battleStatsTable tbody {
@@ -149,6 +158,7 @@
 
 .battleStatsTable td {
   padding: 5px;
+  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.5));
 }
 
 .battleStatsButtons {
