--- a/src/Styles/charStyle.css
+++ b/src/Styles/charStyle.css
@@ -5,7 +5,8 @@
   border: solid;
   border-radius: 1rem;
   flex-direction: row;
-  background-color: #c2c2c2;
+  /* background-color: #d1d1d1; */
+  background: linear-gradient(to bottom, #d1d1d1, #c2c2c2);
   text-align: center;
   margin: 5%;
   -webkit-user-select: none; /* Safari */
@@ -17,6 +18,7 @@
 .iconStyle {
   stroke: black;
   stroke-width: 15;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .gridStyle {
@@ -51,11 +53,11 @@
   justify-content: start;
   overflow-wrap: break-word;
   margin-bottom: 10%;
-  color: rgb(31, 7, 51);
+  color: black;
   display: inline-block;
   font-family: 'Roboto Mono', monospace;
-  max-width: 20ch;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  max-width: 10ch;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .scrollStyle {
@@ -70,6 +72,7 @@
 
 .charMenuIcon {
   cursor: pointer;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .charMenuIcon:hover {
@@ -103,6 +106,7 @@
   margin: 2px;
   font-family: 'Roboto Mono', monospace;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .expStyle {
@@ -111,6 +115,7 @@
   color: #2cfc03;
   font-family: 'Roboto Mono', monospace;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .iconContainer {
@@ -123,6 +128,7 @@
   margin: 5%;
   width: 132px;
   margin-bottom: 3%;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .barsContainer {
@@ -140,17 +146,28 @@
   width: 45px;
   margin-top: -4px;
   margin-bottom: -10px;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+}
+/* icone de str buga quando tem o segundo value acima de 0px */
+.warriorStatIcon {
+  width: 45px;
+  margin-top: -4px;
+  margin-bottom: -10px;
+  filter: drop-shadow(3px 0px 3px rgba(0, 0, 0, 0.6));
 }
 
 .statText {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 22px;
   color: black;
   margin-top: 2px;
   display: inline-block;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .dmgIcon {
   width: 37px;
   margin-top: -2px;
   margin-bottom: -4px;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
