--- a/src/Styles/charStyle.css
+++ b/src/Styles/charStyle.css
@@ -13,6 +13,7 @@
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
   user-select: none; /* Standard */
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .iconStyle {
