sem shadow no charCard pq buga a tavern dnv, floor system feito

--- a/src/Styles/charStyle.css
+++ b/src/Styles/charStyle.css
@@ -1,3 +1,11 @@
+.cardWrapper {
+  position: relative;
+  height: 22rem;
+  width: 25rem;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+  z-index: 0;
+}
+
 .cardContainer {
   position: relative;
   height: 22rem;
@@ -13,7 +21,6 @@
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
   user-select: none; /* Standard */
-  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .iconStyle {
@@ -69,6 +76,7 @@
   left: 80%;
   top: 0%;
   z-index: 5;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 .charMenuIcon {
