--- a/src/Styles/tavern.css
+++ b/src/Styles/tavern.css
@@ -5,7 +5,7 @@
   flex:'wrap';
   background-color: rgb(100, 75, 45);
   height: 25rem;
-  max-width: 75rem;
+  max-width: 100vw;
   left:50%;
   transform: translate(-50%);
 }
@@ -22,8 +22,8 @@
   overflow: hidden;
   flex:'wrap';
   background-color: rgb(220, 203, 183);
-  max-height: 25rem;
-  max-width: 75rem;
+  max-height: 24rem;
+  max-width: 100vw;
   left:50%;
   transform: translate(-50%);
 }
