--- a/src/Styles/utils.css
+++ b/src/Styles/utils.css
@@ -1,44 +1,41 @@
-/* .showMoneyText {
-  margin-top: 30px;
+.showFloorSelect {
+  width: 200px;
+  height: 250px;
+  margin: 0px;
+  margin-top: 24px;
+  text-align: center;
   color:white;
   font-family: 'Roboto Mono', monospace;
-  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.8));
   font-size: clamp(2em, 2vw, 4em);
   font-weight: 400;
-  margin: 0px;
-  padding: 20px;
-  text-align: center;
+  /* background-color: transparent; */
+  border: none;
+  z-index: 1;
+  overflow-y: auto;
+  scrollbar-width: none;
 }
 
-:root {  
-  --gold: #FFFF00 ;
-  --darkGold: #FFD700 ;
-  --copper: #FFC72C;
+.showFloorSelect::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
 
-@keyframes background-pan {
-  from {
-    background-position: 0% center;
-  }
-  
-  to {
-    background-position: -200% center;
-  }
+.customSelectSelected {
+  font-size: 35px;
+  border: none;
 }
 
-.showMoneyText > span  {
-  animation: background-pan 3s linear infinite;
-  background: linear-gradient(
-    to right,
-    var(--gold),
-    var(--darkGold),
-    var(--copper),
-    var(--gold)
-  );
-  background-size: 200%;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  white-space: nowrap;
-  
-} */
+.customSelectItem {
+  color:black;
+  background-color: #7BE0AD;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.customSelectItem:hover {
+  /* Add your styles for hover effect */
+  /* ... */
+  background-color: #AEE5D8;
+  color:rgb(33, 33, 33)
+}
