--- a/src/Styles/battleStats.css
+++ b/src/Styles/battleStats.css
@@ -128,6 +128,7 @@
 
 .battleStatsTable {
   position: absolute;
+  width: 90%;
   left: 0%;
   top: 3%;
   margin-left: 20px;
@@ -146,9 +147,7 @@
 } 
 
 .battleStatsTable th {
-  border-radius: 10px;
   padding: 10px;
-  margin-right: 50px;
   filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.5));
   width: 100%;
 }
