--- a/src/Styles/utils.css
+++ b/src/Styles/utils.css
@@ -9,7 +9,6 @@
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.8));
   font-size: clamp(2em, 2vw, 4em);
   font-weight: 400;
-  /* background-color: transparent; */
   border: none;
   z-index: 1;
   overflow-y: auto;
@@ -24,6 +23,7 @@
 .customSelectSelected {
   font-size: 35px;
   border: none;
+  cursor: pointer;
 }
 
 .customSelectItem {
@@ -31,11 +31,10 @@
   background-color: #7BE0AD;
   border: 1px solid black;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .customSelectItem:hover {
-  /* Add your styles for hover effect */
-  /* ... */
   background-color: #AEE5D8;
   color:rgb(33, 33, 33)
 }
