--- a/src/Styles/utils.css
+++ b/src/Styles/utils.css
@@ -29,8 +29,9 @@
 .customSelectItem {
   color:#000000;
   position: relative;
-  left: 10%;
-  width: 80%;
+  font-size: 25px;
+  left: 15%;
+  width: 70%;
   background-color: #7dd2ff;
   border: 1px solid black;
   border-radius: 5px;
@@ -40,4 +41,19 @@
 .customSelectItem:hover {
   background-color: #d1efff;
   color: white
+}
+
+.showMaxFloor {
+  width: 200px;
+  height: 50px;
+  margin: 0px;
+  margin-top: 24px;
+  text-align: center;
+  color:#7dd2ff;
+  font-family: 'Roboto Mono', monospace;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.8));
+  font-size: clamp(2em, 2vw, 4em);
+  font-weight: 400;
+  font-size: 35px;
+  border: none;
 }
