--- a/src/Styles/charStyle.css
+++ b/src/Styles/charStyle.css
@@ -52,16 +52,9 @@
 
 .nameStyle {
   margin-top: 3%;
-  font-size: 25px;
-  text-align: center;
-  width: 60%;
-  height: 150%;
   position: relative;
-  justify-content: start;
   overflow-wrap: break-word;
-  margin-bottom: 10%;
   color: black;
-  display: inline-block;
   font-family: 'Roboto Mono', monospace;
   max-width: 10ch;
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
@@ -137,6 +130,7 @@
   width: 132px;
   margin-bottom: 3%;
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+  pointer-events: none;
 }
 
 .barsContainer {
