--- a/src/Styles/charStyle.css
+++ b/src/Styles/charStyle.css
@@ -150,7 +150,7 @@
   margin-bottom: -10px;
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
-/* icone de str buga quando tem o segundo value acima de 0px */
+/* icone de str buga quando tem o segundo value de filter acima de 0px */
 .warriorStatIcon {
   width: 45px;
   margin-top: -4px;
