--- a/src/Styles/charMenu.css
+++ b/src/Styles/charMenu.css
@@ -17,6 +17,58 @@
   cursor: pointer;
 }
 
+.renameButton {
+  position: absolute;
+  right: 8%;
+  top: 10%;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 20px;
+  width: 90px;
+  height: 45px;
+  border-top: 2px solid rgba(155, 155, 155, 0.3);
+  border-left: 2px solid rgba(155, 155, 155, 0.3);
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  border-radius: 10px;
+  transition: background-color 0.33s ease-in-out, color 0.23s ease-in-out,
+   text-shadow 0.23s ease-in-out, border  0.23s ease-in-out;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+  z-index: 6;
+}
+
+.saveChangesButton {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 20px;
+  width: 141px;
+  border-top: 2px solid rgba(155, 155, 155, 0.3);
+  border-left: 2px solid rgba(155, 155, 155, 0.3);
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  border-radius: 10px;
+  margin-left: 3px;
+  padding: 8px 12px;
+  transition: background-color 0.33s ease-in-out, color 0.23s ease-in-out,
+   text-shadow 0.23s ease-in-out, border  0.23s ease-in-out;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+}
+
+.spendExpButton {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 20px;
+  width: 140px;
+  border-top: 2px solid rgba(155, 155, 155, 0.3);
+  border-left: 2px solid rgba(155, 155, 155, 0.3);
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  border-radius: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 8px 12px;
+  transition: background-color 0.33s ease-in-out, color 0.23s ease-in-out,
+   text-shadow 0.23s ease-in-out, border  0.23s ease-in-out;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+}
+
 .inputStyle {
   font-family: 'Roboto Mono', monospace;
   font-size: 20px;
@@ -44,6 +96,10 @@
   font-family: 'Roboto Mono', monospace;
   max-width: 10ch;
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+}
+
+.inputStyle:focus {
+  outline: none;
 }
 
 .leftArrowIconStyle {
