--- a/src/Styles/utils.css
+++ b/src/Styles/utils.css
@@ -76,12 +76,10 @@
 .genericBarExpBorder {
   border: 3px black solid;
   width: 100%;
-  margin-left: 9.5%;
-  margin-right: 8.5%;
   border-radius: 8px;
   position: relative;
   padding-right: 4px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
@@ -113,10 +111,9 @@
 
 .genericBarExpText {
   font-size: 18px;
-  width: 100%;
+  width: 350px;
   position: absolute;
   text-align: center;
-  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.2));
 }
 
 .genericBarIconWrapper {
