--- a/src/Styles/general.css
+++ b/src/Styles/general.css
@@ -1,3 +1,13 @@
+.screenDarkMode {
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #393D3F;
+}
+
 .topMenuButtons {
   width: 100vw;
   display: flex;
@@ -8,12 +18,6 @@
   margin-bottom: 5px;
 }
 
-.screenDarkMode {
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #393D3F;
+.buttonText {
+  user-select: none;
 }
