--- a/src/Styles/utils.css
+++ b/src/Styles/utils.css
@@ -107,6 +107,7 @@
   width: 280px;
   position: absolute;
   text-align: center;
+  user-select: none;
 }
 
 .genericBarExpText {
@@ -114,6 +115,7 @@
   width: 350px;
   position: absolute;
   text-align: center;
+  user-select: none;
 }
 
 .genericBarIconWrapper {
