--- a/src/Styles/utils.css
+++ b/src/Styles/utils.css
@@ -63,7 +63,7 @@
 }
 
 .genericBarStandardBorder {
-  border: solid;
+  border: 4px solid;
   margin-left: 9.5%;
   margin-right: 8.5%;
   border-radius: 10px;
@@ -74,7 +74,7 @@
 }
 
 .genericBarExpBorder {
-  border: 3px black solid;
+  border: 4px black solid;
   width: 100%;
   border-radius: 8px;
   position: relative;
@@ -84,6 +84,7 @@
 }
 
 .genericBarHp {
+  width: 20px;
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
   margin-top: 2px;
   color: #ff2227;
