--- a/src/Styles/utils.css
+++ b/src/Styles/utils.css
@@ -34,7 +34,7 @@
   position: absolute;
   width: 180px;
   height: 50px;
-  margin: 0px;
+  margin-left: 10px;
   margin-top: 24px;
   text-align: center;
   color:#7dd2ff;
